k8s/pgadmin-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/user-api: "true"
    io.kompose.service: pgadmin
  name: pgadmin
spec:
  containers:
    - env:
        - name: PGADMIN_DEFAULT_EMAIL
          value: admin@admin.com
        - name: PGADMIN_DEFAULT_PASSWORD
          value: root
      image: dpage/pgadmin4
      name: pgadmin4-container
      ports:
        - containerPort: 80
      resources: {}
      volumeMounts:
        - mountPath: /var/lib/pgadmin
          name: pgadmin-data
  restartPolicy: OnFailure
  volumes:
    - name: pgadmin-data
      persistentVolumeClaim:
        claimName: pgadmin-data
status: {}
