k8s/userapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: userapi
  name: userapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: userapi
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/user-api: "true"
        io.kompose.service: userapi
    spec:
      containers:
        - image: userapi
          name: userapi
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
